Fix dark mode toggle overlapping hamburger menu on mobile
Add media query to shift theme-toggle button left of the hamburger
menu button on screens narrower than $large (925px).

--- a/_sass/_dark-mode.scss
+++ b/_sass/_dark-mode.scss
@@ -393,6 +393,10 @@
   &:hover {
     color: $dark-gray;
   }
+
+  @media screen and (max-width: $large) {
+    right: 3em; /* clear the hamburger menu button */
+  }
 }
 
 /* ---- Responsive video embed ---- */
